# ci-cd

./: .gitignore  pyproject.toml
.github/workflows/: github-actions.yml
src/db/: core.py
src/task1/: main.py
tests/: conftest.py  test_db.py  test_task1.py
