[project]
name = "task1"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12,<=3.14.4"
dependencies = [
]

[tool.pytest.ini_options]
addopts = "-v -ra --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]

markers = [
    "slow: long running tests",
    "api: api tests"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
